--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.1",
+    "@vueuse/core": "^13.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.487.0",
+    "reka-ui": "^2.2.0",
+    "tailwind-merge": "^3.1.0",
+    "tailwindcss": "^4.1.1",
+    "tw-animate-css": "^1.2.5",
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@types/node": "^22.13.17",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "typescript": "~5.7.2",
