--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prettier": "^3.5.3",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
+    "vite-plugin-eslint": "^1.8.1",
     "vue-tsc": "^2.2.4"
   }
 }
