--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.23.0",
     "@types/node": "^22.13.17",
     "@typescript-eslint/eslint-plugin": "^8.29.0",
