--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .eslintignore",
-    "format": "prettier --write ./**/*.{vue,js,jsx,cjs,mjs,ts,tsx,cts,mts} --ignore-path .prettierignore"
+    "lint": "eslint .",
+    "format": "prettier --write ./**/*.{vue,js,jsx,cjs,mjs,ts,tsx,cts,mts} --ignore-path .prettierignore"  
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.1",
