--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
   "devDependencies": {
     "@types/node": "^22.13.17",
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.5.0",
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.23.0",
     "eslint-plugin-vue": "^10.0.0",
     "jiti": "^2.4.2",
+    "prettier": "^3.5.3",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
     "vue-tsc": "^2.2.4"
