--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.1.1",
     "tw-animate-css": "^1.2.5",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue": "^3.5.13"
   },
   "devDependencies": {
     "@types/node": "^22.13.17",
@@ -35,6 +34,7 @@
     "prettier": "^3.5.3",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
+    "vue-router": "^4.5.0",
     "vue-tsc": "^2.2.4"
   }
 }
