Refactor to create a separated demo folder for demo

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
+    "dev:demo": "vite --config demo/vite.config.ts",
+    "build:demo": "vite build --config demo/vite.config.ts",
     "preview": "vite preview",
     "lint": "eslint . --fix",
     "format": "prettier --write ."
