--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@vueuse/core": "^13.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dompurify": "^3.2.5",
     "lucide-vue-next": "^0.487.0",
+    "marked": "^15.0.7",
     "reka-ui": "^2.2.0",
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.1.1",
