--- a/package.json
+++ b/package.json
@@ -53,6 +53,10 @@
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^8.6.12",
+    "@storybook/addon-links": "^8.6.12",
+    "@storybook/builder-vite": "^8.6.12",
+    "@storybook/vue3": "^8.6.12",
     "@types/node": "^22.13.17",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-prettier": "^10.2.0",
