--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "build": "vue-tsc -b && vite build",
     "dev:demo": "vite --config demo/vite.config.ts",
     "build:demo": "vite build --config demo/vite.config.ts",
+    "storybook": "storybook dev -p 6006 -c storybook",
+    "build-storybook": "storybook build -c storybook -o storybook-dist",
+    "dev:storybook": "vite --config storybook/vite.config.ts",
+    "build:storybook": "vite build --config storybook/vite.config.ts",
     "preview": "vite preview",
     "lint": "eslint . --fix",
     "format": "prettier --write ."
@@ -56,6 +60,7 @@
     "@storybook/addon-essentials": "^8.6.12",
     "@storybook/addon-links": "^8.6.12",
     "@storybook/builder-vite": "^8.6.12",
+    "@storybook/cli": "^8.6.12",
     "@storybook/vue3": "^8.6.12",
     "@storybook/vue3-vite": "^8.6.12",
     "@types/node": "^22.13.17",
@@ -67,6 +72,7 @@
     "eslint-plugin-vue": "^10.0.0",
     "jiti": "^2.4.2",
     "prettier": "^3.5.3",
+    "storybook": "^8.6.12",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
     "vite-plugin-dts": "^4.5.3",
