--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,19 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Node modules
 node_modules
+
+# Build directories
 dist
 dist-ssr
-demo-dist
 *.local
+
+# Demo
+demo-dist
+
+# Storybook
+storybook-dist
 
 # Editor directories and files
 .vscode/*
