--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -12,7 +12,7 @@
 
     "baseUrl": ".",
     "paths": {
-      "@ui/*": ["./src/*"]
+      "@geonative/ui/*": ["./src/*"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
