--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@ui/*": ["src/*"],
+      "@geonative/ui/*": ["src/*"],
       "@/*": ["demo/src/*"]
     }
   }
