--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@geonative/ui",
   "version": "0.0.0",
   "type": "module",
-  "main": "./dist/geonative-ui.umd.cjs",
+  "main": "./dist/geonative-ui.js",
   "module": "./dist/geonative-ui.js",
   "types": "./dist/types/index.d.ts",
   "typesVersions": {
