--- a/package.json
+++ b/package.json
@@ -1,8 +1,33 @@
 {
-  "name": "geonative-ui",
-  "private": true,
+  "name": "@geonative/ui",
   "version": "0.0.0",
   "type": "module",
+  "main": "./dist/geonative-ui.js",
+  "module": "./dist/geonative-ui.js",
+  "types": "./dist/types/index.d.ts",
+  "typesVersions": {
+    "*": {
+      "*": [
+        "./dist/types/*"
+      ]
+    }
+  },
+  "exports": {
+    ".": {
+      "types": "./dist/types/index.d.ts",
+      "import": "./dist/geonative-ui.js",
+      "require": "./dist/geonative-ui.umd.cjs",
+      "default": "./dist/geonative-ui.js"
+    },
+    "./style": "./dist/index.css"
+  },
+  "files": [
+    "dist"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "ssh://git@github.com/geonativefr/geonative-ui.git"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
@@ -38,7 +63,9 @@
     "prettier": "^3.5.3",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
+    "vite-plugin-dts": "^4.5.3",
     "vue-router": "^4.5.0",
     "vue-tsc": "^2.2.4"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
