--- a/tsconfig.demo.json
+++ b/tsconfig.demo.json
@@ -12,8 +12,8 @@
 
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"],
-      "@demo/*": ["demo/src/*"]
+      "@geonative/ui/*": ["src/*"],
+      "@/*": ["demo/src/*"]
     }
   },
   "include": [
