--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.1.1",
     "tw-animate-css": "^1.2.5",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-sonner": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^22.13.17",
