--- a/package.json
+++ b/package.json
@@ -40,17 +40,20 @@
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
     "@tailwindcss/vite": "^4.1.1",
-    "@vueuse/core": "^13.0.0",
+    "@vee-validate/zod": "^4.15.0",
+    "@vueuse/core": "^13.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dompurify": "^3.2.5",
     "lucide-vue-next": "^0.487.0",
     "marked": "^15.0.7",
     "reka-ui": "^2.2.0",
-    "tailwind-merge": "^3.1.0",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.1",
     "tw-animate-css": "^1.2.5",
-    "vue": "^3.5.13"
+    "vee-validate": "^4.15.0",
+    "vue": "^3.5.13",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@types/node": "^22.13.17",
