--- a/package.json
+++ b/package.json
@@ -46,10 +46,11 @@
     "dompurify": "^3.2.5",
     "lucide-vue-next": "^0.487.0",
     "marked": "^15.0.7",
-    "reka-ui": "^2.2.0",
+    "reka-ui": "^2.2.1",
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.1.1",
     "tw-animate-css": "^1.2.5",
+    "vaul-vue": "^0.4.1",
     "vue": "^3.5.13",
     "vue-sonner": "^1.3.2"
   },
